public/stylesheets/style.css
/* Header */
#header{
  background: rgb(188,48,253);
  background: linear-gradient(90deg, rgba(188,48,253,1) 2%, rgba(75,20,130,1) 29%, rgba(29,29,29,1) 77%);
  border-color: rgba(41, 41, 41, 0.849);
  border-bottom-style: solid;
  border-bottom-right-radius: 60px;
}
#brand{
  font-weight: bold;
  font-size: 60px;
  color: rgba(10, 10, 10, 0.849);
}
a i{
  margin-right: 0.4rem;
}
a{
  font-weight: bold;
  color: rgba(188, 48, 253, 0.849);
}
d i{
  margin-right: 0.4rem;
}
.navbar-toggler{
  background-color: rgba(77, 77, 77, 0.253)
}
#down-arrow{
  color: rgba(255, 255, 255, 0.719);
}


/*Universal*/
body{
  background-color: rgb(26, 26, 26);
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}
h1{
  color: rgba(255, 255, 255, 0.719);
}
h2{
  color: rgba(255, 255, 255, 0.719);
  font-weight: bold;
}
h3{
  font-weight: bold;
  font-size: 40px;
  color: rgba(188, 48, 253, 0.849);
  position: relative;
}
h4{
  font-weight: bold;
  font-size: 25px;
  color: rgba(188, 48, 253, 0.849);
}
h5{
  color: rgba(188, 48, 253, 0.849);
  font-size: 50px;
  font-weight: bold;
}
p{
  color: rgba(255, 255, 255, 0.719);
  font-size: 18px;
}
.chat-form{
  padding-bottom: 10%;
}
pre{
  color: rgba(255, 255, 255, 0.719);
}
#notRegistered{
  padding-bottom: 10px;
}
hr{
  margin: 0px 0;
  height: 2px;
  background: rgb(26,26,26);
  background: linear-gradient(292deg, rgba(26,26,26,1) 20%, rgba(43,43,43,1) 86%);
}


/* Main Area */
#login{
  padding-top: 5%;
  padding-left: 10%;
}
#channels{
  padding-top: 5%;
  padding-left: 10%;
}
#register{
  padding-top: 5%;
  padding-left: 10%;
}
#account{
  padding-top: 5%;
  padding-left: 10%;
}
.message{
 margin-bottom: 30px;
}
.message .text{
  padding: 15px;
  border: 10px rgba(165, 48, 219, 0.253);
}
main{
  border-color: rgba(41, 41, 41, 0.849);
  border-left-style: solid;
  border-bottom: solid;
  padding: 10%;
}
#sidebar1{
  border-color: rgba(41, 41, 41, 0.849);
  border-bottom: solid;
  background: rgb(29,29,29);
  padding-top: 10px;
}


/*Labels*/
.form-group label{
  color: rgba(255, 255, 255, 0.719);
}
label{
  color: rgba(255, 255, 255, 0.719);
  width: 100%;
  font-size: 20px;
}
#channel-dsiplay-name{
  padding-top: 25px;
}
#channel-avatar{
  padding-top: 30px;
}
#select-which-user-to-add-to-the-channel{
  padding-top: 30px;
}
#email-label{
  padding-top: 30px;
}
#avatar-label{
  padding-top: 15px;
}
#channel-picture{
  padding-top: 25px;
}


/* Avatar-img */
.avatar img{
  border-radius: 50%;
  width: 300px;
  height: 300px;
  background-image: "locals.user.photoURL";
  background-size: cover;
}
#owned-channels img{
  border-radius: 50%;
  width: 80px;
  height: 80px;
  background-image: "channel.image";
  background-size: cover;
}
#participants img{
  border-radius: 50%;
  width: 80px;
  height: 80px;
  background-image: "channel.image";
  background-size: cover;
}
#subscribed-channels img{
  border-radius: 50%;
  width: 80px;
  height: 80px;
  background-image: "channel.image";
  background-size: cover;
  margin-right: 15px;
}


/*Buttons/Inputs*/
#channel-pic-input{
  width: 100%;
  background-color: rgba(26, 26, 26);
  color: rgba(255, 255, 255, 0.719);
}
#file-button{
  width: 100%;
  background-color: rgba(26, 26, 26);
  color: rgba(255, 255, 255, 0.719);
}
#account-file-button{
  width: 100%;
  color: rgba(255, 255, 255, 0.719);
  background-color: transparent;
  padding-bottom: 15px;
}
.form-control{
  width: 60%;
  background-color: rgba(0, 0, 0, 0.253);
}
.custom-file-label{
  color: rgb(124, 124, 124);
  width: 60%;
  background-color: rgba(0, 0, 0, 0.253);
  height: 38px;
  font-size: 1rem;
  font-weight: 400;
}
.custom-file-label::after {
  color: rgba(255, 255, 255, 1);
  content: "Browse";
  background-color: rgba(188, 48, 253, 0.849);
  border-left: inherit;
  height: 36px;
  font-weight: 400;
}
.btn-primary {
  color: #fff;
  background-color: rgb(188,48,253);
  border-color: rgb(188,48,253);
}
.btn-primary:hover {
  color: #fff;
  background-color: rgb(106, 20, 146);
  border-color: rgb(106, 20, 146);
}
#update{
  margin-top: 30px;
}
.custom-control{
  padding-top: 15px;
}


/*Channels*/
#your-channels{
  padding-top: 15px;
}
#owned-channels li{
  border-color: rgba(41, 41, 41, 0.849);
  border-bottom-left-radius: 100px;
  border-top-left-radius: 100px;
  border-bottom-style: solid;
  border-right-style: double;
  padding:5px 10px 0px 5px;
}
#owned-channels ul{
  padding-left: 0px;
}
#subscribed-channels{
  padding-top: 15px;
}
#subscribed-channels li{
  border-color: rgba(41, 41, 41, 0.849);
  border-bottom-left-radius: 100px;
  border-top-left-radius: 100px;
  border-bottom-style: solid;
  border-right-style: double;
  padding:5px 10px 0px 5px;
}
#subscribed-channels ul{
  padding-left: 0px;
}
#channel-link{
  font-size: 20px;
  color: rgba(255, 255, 255, 0.719);
  font-weight: bold;
}


/* Error */
.alert{
  width: 60%;
}


/* Error Page */
.error404{
  padding-top: 1%;
  color: rgba(196, 194, 194);
  text-align: center;
}
.error404 h1{
  width: 100%;
  font-size: 30rem;
  color: rgb(196, 194, 194);
  font-weight: bold;
  text-shadow: 10px 10px 10px rgba(165, 48, 219, 0.253);
}

